<resources>
    <string name="app_name">VenderHQ</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_products">Products</string>
    <string name="btn_import">Import</string>
    <string name="btn_apply">Apply Filter</string>

    <string name="btn_remove_cash">Remove Cash</string>
    <string name="btn_more_filter">More Filter</string>
    <string name="btn_add_cash">Add Cash</string>
    <string name="btn_add_product">Add Products</string>
    <string name="btn_add_supplier">Add Supplier</string>
    <string name="btn_add_product_tags">Add Tags</string>
    <string name="btn_add_product_type">Add Type</string>
    <string name="btn_add_pricebook">Add Price Book</string>
    <string name="btn_add_brand">Add Brand</string>
    <string name="product_screen_header">Add, view and edit your product all in one place. <u>Need Help?</u></string>
    <string name="brand_screen_header">A list of all your brands,  <u>Need Help?</u></string>
    <string name="supplier_screen_header">View and manage your suppliers,  <u>Need Help?</u></string>
    <string name="product_types_header">A list of all your product types,  <u>Need Help?</u></string>
    <string name="product_tags_header">A list of all your product tags,  <u>Need Help?</u></string>
    <string name="brand_price_book_header">A list of all your price books,  <u>Need Help?</u></string>
    <string name="cash_screen_header">Remove your cash movements for the day.<u>Need Help?</u></string>
    <string name="register">Register</string>
    <string name="register_details">Register Details</string>
    <string name="outlet">Outlet</string>
    <string name="main_outlet">Main Outlet</string>
    <string name="main_register">Main register</string>
    <string name="closure">Closure #</string>
    <string name="three">3</string>
    <string name="opening_time">Opening time</string>
    <string name="time">Thu, 12 Oct. 2017, 08:07PM</string>
    <string name="payment_type">Payment Type</string>
    <string name="expected_rp">Expected (RP)</string>
    <string name="cunted_rp">Counted (RP)</string>
    <string name="difference_rp">Difference (RP)</string>
    <string name="cash">Cash</string>
    <string name="cash_payment">View cash payments, Float, Movements</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="cash_movements">Cash Movements</string>
    <string name="time_text">Time</string>
    <string name="user">User</string>
    <string name="amount">Amount (RP)</string>
    <string name="reason">Reason</string>
    <string name="manager">Manager</string>
    <string name="opeming_flate">Openign flate</string>
    <string name="cash_payment_received">Cash Payment received</string>
    <string name="credit_card">Credit Card</string>
    <string-array name="left">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
    </string-array>


    <string-array name="right1">
        <item name="1*1">Sales Screen</item>
        <item name="1*2">Sales History</item>
        <item name="1*3">Cash Management</item>
        <item name="1*4">Close Register</item>
        <item name="1*5">Dashboard</item>
        <item name="1*6">Settings</item>
    </string-array>


    <string-array name="right2">
        <item name="2*1">2*1</item>
        <item name="2*2">2*2</item>
        <item name="2*3">2*3</item>
        <item name="2*4">2*4</item>
        <item name="2*5">2*5</item>
        <item name="2*6">2*6</item>
        <item name="2*7">2*7</item>
        <item name="2*8">2*8</item>
        <item name="2*9">2*9</item>
    </string-array>


    <string-array name="right3">
        <item name="3*1">3*1</item>
        <item name="3*2">3*2</item>
        <item name="3*3">3*3</item>
        <item name="3*4">3*4</item>
        <item name="3*5">3*5</item>
        <item name="3*6">3*6</item>
        <item name="3*7">3*7</item>
        <item name="3*8">3*8</item>
        <item name="3*9">3*9</item>
    </string-array>

</resources>
