<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_gravity="center_vertical"
            style="@style/NormalTextStyleGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/cash_screen_header" />

        <LinearLayout
            android:layout_gravity="center_vertical"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_margin"
            android:layout_weight="2"
            android:gravity="end">
            <Button
                style="@style/buttonNonSelectedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_blue_button"
                android:padding="10dp"
                android:text="@string/btn_remove_cash" />

            <Button
                style="@style/buttonSelectedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_cash" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/side_margin"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView1"

            style="@style/NormalTextStyleGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Time"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"

            style="@style/NormalTextStyleGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="User"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            style="@style/NormalTextStyleGray"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Reasons"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            style="@style/NormalTextStyleGray"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Transaction(Rp)"
            android:textStyle="bold"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewProductList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />
</LinearLayout>