<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/side_margin"
    android:layout_marginRight="@dimen/side_margin"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_products" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/NormalTextStyleGray"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/product_screen_header" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/side_margin"
                android:layout_weight="1"
                android:gravity="end">

                <Button
                    style="@style/buttonNonSelectedStyle"
                    android:layout_width="wrap_content"
                    android:background="@drawable/rounded_orange_button"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_import" />

                <Button
                    android:background="@drawable/rounded_blue_button"
                    android:padding="5dp"                    style="@style/buttonSelectedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_add_product" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView"
                        style="@style/NormalTextStyleGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Product Type" />

                    <Spinner
                        style="@style/spinner_style"
                        android:layout_width="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        style="@style/NormalTextStyleGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Supplier" />

                    <Spinner
                        style="@style/spinner_style"
                        android:layout_width="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        style="@style/NormalTextStyleGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Brand" />

                    <Spinner
                        style="@style/spinner_style"
                        android:layout_width="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView2"
                        style="@style/NormalTextStyleGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tags" />

                    <Spinner
                        style="@style/spinner_style"
                        android:layout_width="match_parent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end">

                <Button
                    style="@style/buttonNonSelectedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_blue_button"
                    android:padding="5dp"
                    android:text="@string/btn_apply" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/view_gray_line"></include>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Active(0)"
                android:textColor="@color/buttonNotSelectedBackground"></TextView>

            <TextView
                style="@style/textViewStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Inactive(0)"
                android:textColor="@color/buttonNotSelectedBackground"></TextView>

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="All(0)"
                android:textColor="@color/buttonNotSelectedBackground"></TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    style="@style/normalBoldTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Export files" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/view_gray_line"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:orientation="horizontal"
            android:weightSum="12">

            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                android:text="Product" />

            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"

                android:text="Created" />

            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"

                android:text="Tags" />

            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Brand" />

            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="Supplier" />

            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"

                android:text="Variants" />

            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="Price" />

            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="Count" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"></TextView>
        </LinearLayout>

        <include layout="@layout/view_gray_line"></include>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </LinearLayout>


</RelativeLayout>